# cambalache

./: .gitignore  COPYING  README.md  SUPPORTERS.md  TODO.md  ar.xjuan.Cambalache.json  meson.build  postinstall.py  run-dev.py
cambalache/: __init__.py  cambalache.css  cambalache.gresource.xml  cmb_base.py  cmb_base.sql  cmb_context_menu.py  cmb_context_menu.ui  cmb_css.py  cmb_css_editor.py  cmb_css_editor.ui  cmb_db.py  cmb_db_migration.py  cmb_fragment_editor.py  cmb_fragment_editor.ui  cmb_history.sql  cmb_layout_property.py  cmb_library_info.py  cmb_list_store.py  cmb_object.py  cmb_object_data.py  cmb_object_data_editor.py  cmb_object_editor.py  cmb_object_tree.py  cmb_objects.py  cmb_objects_base.py  cmb_project.py  cmb_project.sql  cmb_project_view.py  cmb_property.py  cmb_property_controls.py  cmb_signal_editor.py  cmb_signal_editor.ui  cmb_translatable_popover.py  cmb_translatable_widget.py  cmb_translatable_widget.ui  cmb_tree_view.py  cmb_type_chooser.py  cmb_type_chooser.ui  cmb_type_chooser_popover.py  cmb_type_chooser_widget.py  (+13 more)
cambalache-db/: cambalache-db-test.sql  cambalache-db.py  cambalache-db.sql  gir.py  gtk3test.ui  gtk4test.ui
cambalache/app/: SUPPORTERS.md  __init__.py  app.gresource.xml  cambalache.css  cambalache.in  cmb_application.py  cmb_shortcuts.ui  cmb_tutor.py  cmb_tutorial.py  cmb_window.py  cmb_window.ui  meson.build
cambalache/db/: cmb_base.sql  cmb_history.sql  cmb_project.sql
cambalache/merengue/: __init__.py  config.py.in  merengue.css  merengue.gresource.xml  merengue.in  meson.build  mrg_application.py  mrg_controller.py  mrg_controller_registry.py  mrg_css_provider.py  mrg_placeholder.py
cambalache/merengue/controller/: mrg_controller.py  mrg_controller_registry.py
cambalache/merengue/mrg_adw/: __init__.py  mrg_adw_application_window.py  mrg_adw_bin.py  mrg_adw_carousel.py  mrg_adw_window.py
cambalache/merengue/mrg_gtk/: __init__.py  mrg_g_binding.py  mrg_gtk_aspect_frame.py  mrg_gtk_assistant.py  mrg_gtk_bin.py  mrg_gtk_box.py  mrg_gtk_center_box.py  mrg_gtk_expander.py  mrg_gtk_frame.py  mrg_gtk_grid.py  mrg_gtk_label.py  mrg_gtk_list_box.py  mrg_gtk_list_box_row.py  mrg_gtk_menu.py  mrg_gtk_menu_item.py  mrg_gtk_notebook.py  mrg_gtk_overlay.py  mrg_gtk_paned.py  mrg_gtk_popover.py  mrg_gtk_revealer.py  mrg_gtk_scrolled_window.py  mrg_gtk_stack.py  mrg_gtk_viewport.py  mrg_gtk_widget.py  mrg_gtk_window.py  mrg_selection.py
cambalache/merengue/mrg_handy/: __init__.py  mrg_container.py  mrg_hdy_deck.py  mrg_hdy_leaflet.py  mrg_hdy_search_bar.py
cambalache/merengue/utils/: __init__.py  utils.py
cambalache/private/: cmb_private.c  cmb_private.h  meson.build
cambalacheui/: __init__.py  cambalacheui.gresource.xml  cmb_base.py  cmb_base.sql  cmb_db.py  cmb_history.sql  cmb_layout_property.py  cmb_list_store.py  cmb_object.py  cmb_object_editor.py  cmb_objects_base.py  cmb_project.py  cmb_project.sql  cmb_property.py  cmb_signal_editor.py  cmb_tree_view.py  cmb_type_info.py  cmb_ui.py  cmb_view.py  config.py.in  gobject-2.0.sql  gtk+-3.0.sql  gtk-4.0.sql  meson.build
catalogs/: Makefile
catalogs/gdkpixbuf/: gdkpixbuf-2.0.xml
catalogs/glib/: GObject.xml  gio-2.0.xml  gobject-2.0.xml
catalogs/gnome/: Adwaita.xml  Handy.xml  libadwaita-1.xml  libhandy-1.xml
catalogs/gtk/: Gtk.xml  gdk-3.0.xml  gdk-4.0.xml  gsk-4.0.xml  gtk+-3.0.xml  gtk-4.0.xml
catalogs/pango/: pango-1.0.xml
data/: ar.xjuan.Cambalache.appdata.xml.in  ar.xjuan.Cambalache.desktop.in  ar.xjuan.Cambalache.gschema.xml  ar.xjuan.Cambalache.metainfo.xml.in  ar.xjuan.Cambalache.mime.xml  cambalache-catalog.dtd  cambalache-project.dtd  meson.build
glade/: README  gladecambalache.xml
glade/gladecambalache/: __init__.py
merengue/: __init__.py  cmb_merengue.css  cmb_merengue.py  merengue.css  merengue.gresource.xml  merengue.in  meson.build  mrg_application.py  utils.py
merengue/cmb_gtk/: __init__.py  cmb_controller.py  cmb_gtk_widget.py  cmb_gtk_window.py
merengue/controller/: __init__.py  cmb_controller.py  cmb_controller_registry.py  mrg_controller.py  mrg_controller_registry.py
merengue/mrg_gtk/: __init__.py  mrg_gtk_widget.py  mrg_gtk_window.py  mrg_selection.py
merengue/utils/: __init__.py  utils.py
plugins/: Makefile  meson.build
plugins/gdk/: gdk-3.0.xml  gdk-4.0.xml
plugins/gdkpixbuf/: gdk-pixbuf-2.0.xml
plugins/glib/: gio-2.0.xml  gobject-2.0.xml
plugins/gnome/: libadwaita-1.xml  libhandy-1.xml
plugins/gobject/: gobject-2.0.xml
plugins/gsk/: gsk-4.0.xml
plugins/gtk/: Gtk.xml  gdk-3.0.xml  gdk-4.0.xml  gsk-4.0.xml  gtk+-3.0.xml  gtk-4.0.xml
plugins/pango/: pango-1.0.xml
po/: LINGUAS  POTFILES  README.md  cambalache.pot  cs.po  de.po  es.po  fr.po  it.po  nl.po  uk.po
src/: __init__.py  ar.xjuan.Cambalache.in  cambalache.css  cambalache.gresource.xml  cambalache.in  cambalache.py  cambalache_app.gresource.xml  cmb_application.py  cmb_window.py  cmb_window.ui  meson.build
tests/: cambalache-db-test.sql  test_cmb_object.py  test_import_export.py  test_undo_redo.py
tests/gtk+-3.0/: children.ui  comboboxtext.ui  custom_fragment.ui  dialog.ui  label.ui  levelbar.ui  liststore.ui  packing.ui  scale.ui  signals.ui  sizegroup.ui  style.ui  template.ui  treestore.ui  window.ui
tests/gtk-4.0/: children.ui  custom_fragment.ui  inline_object.ui  layout.ui  liststore.ui  signals.ui  stack_page.ui  template.ui  test.cmb  window.ui
tests/gtk4/: gtkwindow.ui
tools/: Gtk.xml  Makefile  cambalache-db.py  db-codegen.py  update-supporters.py  update_type_data.sh
tools/utils/: gir.py  utils.c  utils.h
