install_data([
    'glib/gobject-2.0.xml',
    'glib/gio-2.0.xml',
    'gdkpixbuf/gdkpixbuf-2.0.xml',
    'pango/pango-1.0.xml',
    'gtk/gdk-3.0.xml',
    'gtk/gdk-4.0.xml',
    'gtk/gsk-4.0.xml',
    'gtk/gtk-4.0.xml',
    'gtk/gtk+-3.0.xml',
    'gnome/libhandy-1.xml',
    'gnome/libadwaita-1.xml'
    ],
    install_dir: catalogsdir)

